Adding foreign key works
